--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -156,10 +156,12 @@
   <h1 style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">Volunteering & Certifications</h1>
   <div class="vol-cert-grid">
     <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/oracle-volunteering.png') }}" alt="Oracle Volunteering Logo" class="issuer-logo">
       <h3>Oracle Volunteering (OV)</h3>
       <p>Volunteered in diverse initiatives including organizing a blood donation camp with Hiranandani Hospital, designing physics learning aids for SSC students to simplify concepts, and participating in a beach cleanup drive that removed over 350 kg of plastic waste—demonstrating commitment to community health, education, and the environment.</p>
     </div>
     <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/john-hopkins-university-logo.png') }}" alt="John Hopkins University Logo" class="issuer-logo">
       <h3>The Data Scientist Toolbox</h3>
       <p><strong>Issued by:</strong> John Hopkins University <strong></strong></p>
       <p><Strong>Issue Date:</strong> April 2024</p>
@@ -167,6 +169,7 @@
       <a href="https://coursera.org/share/7fe9fccfa87ae548ea8380f01ae53021" target="_blank">View Credential →</a>
     </div>
     <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/IBM-logo.png') }}" alt="IBM Logo" class="issuer-logo">
       <h3>Python for Data Science & AI</h3>
       <p><strong>Issued by:</strong> IBM <strong></strong></p>
       <p><Strong>Issue Date:</strong> April 2021 </p>
@@ -176,6 +179,7 @@
       <a href="https://www.credly.com/badges/1d029240-3d11-43e5-9f01-1525b98a34ad?source=linked_in_profile" target="_blank">View Credential →</a>
     </div>
     <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/university-of-michigan-logo.png') }}" alt="University of Michigan Logo" class="issuer-logo">
       <h3>Using Databases with Python</h3>
       <p><strong>Issued by:</strong> University of Michigan <strong></strong></p>
       <p><Strong>Issue Date:</strong> December 2020 </p>
@@ -185,6 +189,7 @@
       <a href="https://coursera.org/verify/762ZWHPRMNH5" target="_blank">View Credential →</a>
     </div>
     <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/university-of-alberta-logo.png') }}" alt="University of Alberta Logo" class="issuer-logo">
       <h3>Software processes and Agile Practices</h3>
       <p><strong>Issued by:</strong> University of Alberta <strong></strong></p>
       <p><Strong>Issue Date:</strong> April 2020 </p>
