UI Related Changes + Volunteering Additions

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
     <h1 class="fade-in">👋 Hi, I'm Siddhesh Shankar</h1>
     <p class="subtitle fade-in">Aspiring Data Scientist · Backend Engineer · Tech Explorer</p>
     <p class="hero-tagline fade-in">
-      I build data-powered systems that unlock insights and drive smart decisions.
+      <strong>I turn data into clarity and code into scalable systems. With a strong foundation in backend development and a passion for analytics, I build solutions that are smart, fast, and impactful.</strong>
     </p>
     <a href="#projects" class="download-btn fade-in">View My Work ↓</a>
   </div>
@@ -159,6 +159,20 @@
       <img src="{{ url_for('static', filename='images/oracle-volunteering.png') }}" alt="Oracle Volunteering Logo" class="issuer-logo">
       <h3>Oracle Volunteering (OV)</h3>
       <p>Volunteered in diverse initiatives including organizing a blood donation camp with Hiranandani Hospital, designing physics learning aids for SSC students to simplify concepts, and participating in a beach cleanup drive that removed over 350 kg of plastic waste—demonstrating commitment to community health, education, and the environment.</p>
+    </div>
+    <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/football-logo.png') }}" alt="Neptune Society Football - Logo" class="issuer-logo">
+      <h3>Football Training for Society Kids</h3>
+      <p>Initiated and lead weekly football sessions for children in the society, focusing on nurturing their interest and love for the sport. Teach fundamental skills, game rules, and the spirit of teamwork and sportsmanship. Aim to instill discipline, passion, and appreciation for the beauty of the game through structured yet fun training.</p>
+    </div>
+    <div class="vol-cert-card">
+      <img src="{{ url_for('static', filename='images/alison-learning-logo.png') }}" alt="Alison Logo" class="issuer-logo">
+      <h3>Diploma in Community Development</h3>
+      <p><strong>Issued by:</strong> Alison <strong></strong></p>
+      <p><Strong>Issue Date:</strong> September 2021</p>
+      <p>Gain an understanding of the core values, concepts, and practices in the community development sector. Learn how community health is an essential component of development efforts.
+        Explore ways to identify key issues affecting your community. Develop the skills to critically assess and address these challenges. Understand the role of inclusive participation and sustainable solutions in driving change.
+        Empower yourself to contribute meaningfully to community well-being and growth.</p>
     </div>
     <div class="vol-cert-card">
       <img src="{{ url_for('static', filename='images/john-hopkins-university-logo.png') }}" alt="John Hopkins University Logo" class="issuer-logo">
