--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -141,7 +141,7 @@
             alt="OFSS Logo" class="exp-logo-minimal">
           <div class="exp-text">
             <h2>Oracle Financial Services Software - Associate Consultant</h2>
-            <span class="timeline-date">July 2023 – Present</span>
+            <span class="timeline-date">July 2023 – August 2025</span>
           </div>
         </div>
       </div>
